--- a/PokeServlet/WebContent/battleground_style.css
+++ b/PokeServlet/WebContent/battleground_style.css
@@ -1,150 +1,135 @@
 body {
-		font-family:arial,helvetica,sans-serif;
+		font-family: "Asap";
 		font-size:12px;
 }
 
 #content {
     position:absolute;
-    top: 10px;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     background-color:gray;
 }
 
 .playerPanel {
     position: relative;
-    //border:1px solid #bbb;
-    //padding:10px;
     height:50%;
-    //background-color:pink;
+}
+
+.panel {
+	background-color: rgb(112,112,112);
+    height:65%;
+    position:absolute;
+}
+
+.p1 {
+	top: 2.5%
+}
+
+.p2 {
+	bottom: 2.5%;
 }
 
 .prizePanel {
     border-radius: 10px;
-    position:absolute;
-    background-color: rgb(112,112,112);
-    height:67.5%;
     width:30%;
-} #p1Prize {
-    top: 2.5%;
+} #p1PrizePanel {
     left: 2.5%;
-} #p2Prize {
-    bottom: 2.5%;
+} #p2PrizePanel {
     right: 2.5%;
 }
 
 .activePanel {
     border-radius: 15px;
-    position: absolute;
-    height: 67.5%;
     width: 50%;
-    background-color: rgb(112,112,112);
-} #p1Active {
-    top: 2.5%;
+} #p1ActivePanel {
     left: 35%;
-} #p2Active {
-    bottom: 2.5%;
+} #p2ActivePanel {
     right: 35%;
 }
 
 .discardAndDeckPanel {
     border-radius: 10px;
-    position: absolute;
-    height: 67.5%;
     width: 10%;
-    background-color: rgb(112,112,112);
-} #p1Deck {
+} #p1DeckPanel {
     right: 2.5%;
-    top: 2.5%;
-} #p2Deck {
+} #p2DeckPanel {
     left: 2.5%;
-    bottom: 2.5%;
 }
 
 .handPanel {
     border-radius: 10px;
     position: absolute;
-    height: 25%;
+    height: 30%;
     width: 90%;
     background-color: rgb(88,88,88) ;
-} #p1Hand {
+} #p1HandPanel {
     left: 5%;
-    bottom: 2.5%;
-} #p2Hand {
+    bottom: 0%;
+} #p2HandPanel {
     right: 5%;
-    top: 2.5%;
+    top: 0%;
+}
+
+.row {
+	position: relative;
+	width: 100%;
 }
 
 .row-40-100 {
-    position: relative;
     height: 40%;
-    width: 100%;
-    //background-color: purple;
 }
 
 .row-4-100 {
-    position: relative;
     height: 4%;
-    width: 100%;
-    //background-color:red;
 }
 
-
-
 .row-9-100 {
-    position: relative;
     height: 9%;
-    width: 100%;
-    //background-color:red;
 }
 
 .row-2-100 {
-    position: relative;
     height: 2%;
-    width: 100%;
-    //background-color:red;
+}
+
+.col {
+	float: left;
+    position: relative;
+    height: 100%;
 }
 
 .col-1-3 {
-    float: left;
-    position: relative;
-    height: 100%;
     width: 33.333%;
-    //background-color:pink;
 }
 
 .col-2-5 {
-    float: left;
-    position: relative;
-    height: 100%;
     width: 40%;
-    //background-color:pink;
 }
 
 .col-1-5 {
-    float: left;
-    position: relative;
-    height: 100%;
     width: 20%;
-    //background-color:pink;
 }
 
-.row-1-2 {
-    float: left;
-    position: relative;
-    height: 100%;
-    width: 50%;
-    //background-color:pink;
+.descriptor {
+	top: 25%;
+	text-align: center;
+	color: white;
 }
 
 .cardDisplay {
     float: left;
-    //top: 5%;
     left: 10%;
-    //background-color:yellow;
     border:1px solid #bbb;
     position: relative;
     height: 100%;
     width: 80%;
+}
+
+.cardHandDisplay {
+	white-space: nowrap;
+	float: left;
+	height: 80%;
+    width: 10%;
+    padding: 1%;
 }
